[package]
name = "qwen-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
http-body-util = "0.1"
async-stream = "0.3"
futures-util = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
